--- a/src/Raven.Studio/wwwroot/Content/css/modals.less
+++ b/src/Raven.Studio/wwwroot/Content/css/modals.less
@@ -279,16 +279,12 @@
 }
 
 #mapReduceIndexSyntaxDialog {
-    width: 65%;
+    width: 1280px;
 }
 
 #additionalSourceSyntaxDialog {
-    width: 55%;
+    width: 1080px;
 }
-
-#transformationScriptSyntaxDialog {
-    width: 30%;
-} 
 
 #index-performance-operation-details {
 
