--- a/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
@@ -393,6 +393,47 @@
 .edit-raven-sql-task {
 
     overflow-x: hidden;
+
+    .flex-row {
+        transition: transform 0.5s;
+    }
+
+    .test-container {
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s;
+
+        .tab-content {
+            overflow: auto;
+        }
+    }
+    &.test-mode {
+        .flex-row {
+            transform: translateX(-50%);
+        }
+        .test-container {
+            transform: translateX(0%);
+        }
+    }
+}
+
+.edit-raven-etl-task {
+
+    overflow-x: hidden;
+    
+    .result-item {
+        .header {
+            padding: @grid-gutter-width / 2;
+            background-color: @gray-dark;
+        }
+        pre {
+            background-color: @gray-darker;
+        }
+    }
     
     .flex-row {
         transition: transform 0.5s;
@@ -434,7 +475,7 @@
         }
     }
 
-    .edit-raven-sql-task {
+    .edit-raven-sql-task, .edit-raven-etl-task {
         & > .flex-row {
             z-index: @zindex-modal;
         }
