RavenDB-8457 Show details button in cluster page

--- a/src/Raven.Studio/wwwroot/App/views/manage/cluster.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/cluster.html
@@ -139,7 +139,7 @@
                                     Error: <span data-bind="text: errorDetailsShort"></span>
                                 </div>
                                 <div class="flex-separator"></div>
-                                <span class="margin margin-right">
+                                <span class="margin margin-right" data-bind="visible: errorDetailsShort() !== errorDetails()">
                                     <a href="#" data-bind="click: _.partial($root.showErrorDetails, tag())">Show details</a>
                                 </span>
                             </div>
