RavenDB-11558 Fix encrypted database icon

--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -300,7 +300,7 @@
 .make-icon(swap, "\e902");
 .make-icon(force, "\e903");
 .make-icon(lock, "\e904");
-.make-icon(encryption, "e904");
+.make-icon(encryption, "\e904");
 .make-icon(unlock, "\e905");
 .make-icon(lock-sidebyside, "\e906");
 .make-icon(lock-error, "\e907");
