--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editPeriodicBackupTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editPeriodicBackupTask.html
@@ -1,4 +1,4 @@
-<form class="content-margin edit-backup" data-bind="with: configuration">
+<form class="content-margin edit-backup" data-bind="with: configuration" autocomplete="off">
     <div class="toolbar" data-bind="with: $root">
         <button data-bind="click: savePeriodicBackup, enable: $root.dirtyFlag().isDirty" type="submit" class="btn btn-primary">
             <i class="icon-save"></i> <span>Save</span>
