--- a/src/Raven.Studio/wwwroot/App/views/resources/serverDashboard.html
+++ b/src/Raven.Studio/wwwroot/App/views/resources/serverDashboard.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="list-container">
-                        <div class="create-database" data-bind="visible: $root.noDatabases">
+                        <div class="create-database" data-bind="visible: $root.noDatabases() && !$root.spinners.loading()">
                             <div><i class="icon-empty-set"></i><span>No data</span></div>
                             <button  data-bind="click: $root.newDatabase" class="btn btn-primary btn-xs text-uppercase" >Create Database</button>
                         </div>
@@ -149,7 +149,7 @@
                         <div>Offline: <strong data-bind="text: totalOfflineDatabases"></strong></div>
                     </div>
                     <div class="list-container">
-                        <div class="create-database" data-bind="visible: $root.noDatabases">
+                        <div class="create-database" data-bind="visible: $root.noDatabases() && !$root.spinners.loading()">
                             <div><i class="icon-empty-set"></i><span>No data</span></div>
                             <button  data-bind="click: $root.newDatabase" class="btn btn-primary btn-xs text-uppercase" >Create Database</button>
                         </div>
