--- a/src/Raven.Studio/wwwroot/Content/css/pages/indexes-terms.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/indexes-terms.less
@@ -33,6 +33,10 @@
         .field-terms {
             background-color: @gray-darker;
 
+            &.no-entries {
+                padding: @grid-gutter-width/2 0;
+            }
+            
             ul {
                 display: flex;
                 flex-wrap: wrap;
