RavenDB-11497 Trusted thumbprints from Security.WellKnownCertificates.Admin should be displayed in studio certificate view

--- a/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
@@ -109,7 +109,7 @@
             </div>
             
             <div class="scroll flex-grow">
-                <div class="panel panel-info certificate-item" data-bind="visible: wellKnownCerts().length">
+                <div class="panel panel-info certificate-item" data-bind="visible: wellKnowsCertsVisible">
                     <div class="padding padding-sm flex-horizontal">
                         <div class="certificate-name">
                             <div class="flex-horizontal">
@@ -117,7 +117,7 @@
                                     <i class="icon-certificate"></i>
                                 </div>
                                 <div>
-                                    <h3 class="no-margin">Well known certificates defined by system administrator</h3>
+                                    <h3 class="no-margin">Well known admin certificates defined by system administrator</h3>
                                 </div>
                             </div>
                             <div class="thumbprint" title="Certificates thumbprints" data-bind="foreach: wellKnownCerts">
