RavenDB-11497 Trusted thumbprints from Security.WellKnownCertificates.Admin should be displayed in studio certificate view - review comments

--- a/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
@@ -109,7 +109,7 @@
             </div>
             
             <div class="scroll flex-grow">
-                <div class="panel panel-info certificate-item" data-bind="visible: wellKnowsCertsVisible">
+                <div class="panel panel-info certificate-item" data-bind="visible: wellKnownAdminCertsVisible">
                     <div class="padding padding-sm flex-horizontal">
                         <div class="certificate-name">
                             <div class="flex-horizontal">
@@ -120,7 +120,7 @@
                                     <h3 class="no-margin">Well known admin certificates defined by system administrator</h3>
                                 </div>
                             </div>
-                            <div class="thumbprint" title="Certificates thumbprints" data-bind="foreach: wellKnownCerts">
+                            <div class="thumbprint" title="Certificates thumbprints" data-bind="foreach: wellKnownAdminCerts">
                                 <span data-bind="text: $data"></span> <br />
                             </div>
                         </div>
