RavenDB-11594 Add Use Experimental Features check-box in the setup wizard

--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/additionalSourceSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/additionalSourceSyntax.html
@@ -30,10 +30,11 @@
                 </div>
             </div>
         </div>
-        <div class="modal-footer text-left">
-            <div class="text-info bg-info padding">
-                <i class="icon-warning"></i> Note: The JavaScript index is an experimental feature.<br/>
-                Set 'Features.Availability' configuration to 'Experimental' in order to use.
+        <div class="modal-footer text-left bg-info flex-horizontal">
+            <div class="flex-start"><i class="icon-experimental"></i></div>
+            <div>
+                Note: The JavaScript index is an experimental feature.<br/>
+                Set <code>Features.Availability</code> configuration to <code>Experimental</code> in order to use.
             </div>
         </div>
     </div>
