RavenDB-8647 Create SQL Migration View

--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/mixins/buttons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/mixins/buttons.less
@@ -46,7 +46,7 @@
     border-color:@gray-lighter;
 
     [class^="icon-"], [class*=" icon-"] {
-        color:@background;
+        color: inherit;
     }
 
     &:hover,
