--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -402,6 +402,20 @@ a {
     text-overflow: ellipsis;
 }
 
+.text-capitalize {
+    text-transform: capitalize;
+}
+
+i {
+    + strong {
+        color: inherit;
+    }
+}
+
+.display-contents {
+    display: contents;
+}
+
 .padding {
     padding: (@grid-gutter-width / 2);
 
