--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
@@ -215,16 +215,24 @@
                             </div>
                             <div class="flex-horizontal flex-wrap table-header">
                                 <span class="with-top-label js-sql-table-name" data-label="Table" data-bind="text: tableName"></span>
-                                <i class="icon-arrow-right"></i>
+                                <i class="icon-arrow-filled-right"></i>
                                 <div class="with-top-label raven-property-name inline-edit inline-block" data-bind="css: { 'edit-disabled': !checked() }" data-label="Collection">
                                     <span class="static" data-bind="text: collectionName"></span>
                                     <input class="form-control input-sm" data-bind="textInput: collectionName" />
                                 </div>
                             </div>
                             <div class="flex-separator"></div>
-                            <div class="customizations" data-bind="visible: checked">
-                                <i title="Filtering is enabled" data-bind="visible: customizeQuery" class="icon-query"></i>
-                                <i title="Transform script is enabled" data-bind="visible: transformResults" class="icon-patch"></i>
+                            <div class="customizations flex-horizontal" data-bind="visible: checked">
+                                <div data-bind="visible: customizeQuery" class="margin-right">
+                                    <i title="Filtering is enabled" class="icon-tick text-success"></i>
+                                    <span>filtering</span>
+                                </div>
+                                <div data-bind="visible: transformResults" class="margin-right">
+                                    <i title="Transform script is enabled" class="icon-tick text-success"></i>
+                                    <span>transform</span>
+                                </div>
+                                
+                                
                             </div>
                             <div data-bind="visible: checked">
                                 <button class="btn btn-default" title="Show incoming links" data-bind="click: $root.showIncomingReferences">
@@ -269,7 +277,7 @@
 
         <div class="col-sm-12 col-lg-4 flex-vertical">
             <div id="editTransform" class="panel" data-bind="with: itemBeingEdited">
-                <div class="padding padding-sm">
+                <div class="padding">
                     <div>
                         <label>
                             <strong>SQL Table:</strong> <span data-bind="text: tableName"></span>
@@ -369,52 +377,68 @@
 </div>
 
 <script type="text/html" id="object-template">
-    <table class="properties_table">
-        <tbody data-bind="foreach:documentColumns">
-            <tr>
-                <td><span class="sqlName" data-bind="text: sqlName"></span></td>
-                <td><i class="icon-arrow-right"></i></td>
-                <td class="inline-edit">
+    <!-- ko if:documentColumns -->
+    <div class="prop-table">
+        <!-- ko foreach:documentColumns -->
+            <div class="prop-table-row">
+                <div class="sqlName" data-bind="text: sqlName, attr:{ title: sqlName }"></div>
+                <div class="arrow"><i class="icon-arrow-filled-right"></i></div>
+                <div class="inline-edit">
                     <div class="static">
-                        <span class="raven-property-name" data-bind="text: propertyName"></span> <span class="text-muted" data-bind="html: columnTypeAsHtml($root.model.binaryToAttachment())"></span>
+                        <span class="raven-property-name" data-bind="text: propertyName, attr:{ title: propertyName }"></span> <span class="text-muted raven-property-type" data-bind="html: columnTypeAsHtml($root.model.binaryToAttachment())"></span>
                     </div>
                     <input class="form-control input-sm" data-bind="textInput: propertyName" />
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-    <table style="width:100%">
-        <tbody data-bind="foreach: references">
-            <tr data-bind="attr: { 'data-ref-id': id }">
-                <td width="400">
-                    <div class="relation" data-bind="visible: type === 'OneToMany'">
-                        <span class="text-muted">PK</span>
+                </div>
+            </div>
+        <!-- /ko -->
+    </div>
+    <!-- /ko -->
+    <div class="reverences-container">
+        <!-- ko foreach: references -->
+        <div class="reverence-item" data-bind="attr: { 'data-ref-id': id }">
+            
+                <div class="relation" data-bind="visible: type === 'OneToMany'">
+                    <div class="key" title="primary key">
+                        <span class="key-type primary"><i class="icon-key"></i></span>
                         <strong>
                             <span data-bind="text: $parent.getPrimaryKeyColumnNames().join(',')"> </span>
-                            <i data-bind="attr: { class: getTypeClass(), title: 'Relation type: ' + type }"></i>
                         </strong>
-                        <span class="text-muted">from FK</span>
+                    </div>
+                    <div class="relation-type" title="one-to-many relation">
+                        <i data-bind="attr: { class: getTypeClass() }"></i>
+                    </div>
+                    <div class="from" title="from foreign key">
+                        <span class="text-muted"><!--from--> <span class="key-type foreign"><i class="icon-key"></i></span></span>
                         <span data-bind="text: joinColumns.join(', ')"></span>
-                        <span class="text-muted">in</span>
+                        
+                    </div>
+                    <div class="in">
+                        <!--<span class="text-muted">in</span>-->
                         <strong>
                             <a href="#" class="nobr" data-bind="attr: { title: 'Navigate to reverse reference in ' + targetTable.tableName + ' table'}, click: $root.goToReverseReference">
                                 <i class="icon-table"></i> <span data-bind="text: targetTable.tableName"></span>
                             </a>
                         </strong>
                     </div>
+                </div>
 
-                    <div class="relation" data-bind="visible: type === 'ManyToOne'">
-                        <span class="text-muted">FK</span>
+                <div class="relation" data-bind="visible: type === 'ManyToOne'">
+                    <div  class="key" title="foreign key">
+                        <span class="key-type foreign"><i class="icon-key"></i></span>
                         <strong>
                             <span data-bind="text: joinColumns.join(', ')"></span>
-                            <i data-bind="attr: { class: getTypeClass(), title: 'Relation type: ' + type }"></i>
+                            
                         </strong>
-
-                        <span class="text-muted">from PK</span>
+                    </div>
+                    <div class="relation-type" title="many-to-one relation">
+                        <i data-bind="attr: { class: getTypeClass() }"></i>
+                    </div>
+                    <div class="from" title="from primary key">
+                        <span class="text-muted"><!--from--> <span class="key-type primary"><i class="icon-key"></i></span></span>
                         <span data-bind="text: targetTable.getPrimaryKeyColumnNames().join(',')"></span>
-
-                        <span class="text-muted">in</span>
+                    </div>
+                    <div class="in" title="in table">
+                        <!--<span class="text-muted">in</span>-->
                         <strong>
                             <a href="#" class="nobr" data-bind="attr: { title: 'Navigate to reverse reference in ' + targetTable.tableName + ' table'}, click: $root.goToReverseReference">
                                 <i class="icon-table"></i>
@@ -422,18 +446,17 @@
                             </a>
                         </strong>
                     </div>
-                </td>
-                <td width="220">
+                </div>
+            
+                <div class="actions-container">
                     <div class="btn-group link-actions">
-                        <button class="btn btn-sm" data-bind="css: { active: action() === 'skip' }, click: _.partial($root.onActionClicked, $data, 'skip')"><i class="icon-skip"></i> <span>skip</span></button>
-                        <button class="btn btn-sm js-btn-link" data-bind="css: { active: action() === 'link', disabled: !canLinkTargetTable() }, click: _.partial($root.onActionClicked, $data, 'link')"><i class="icon-link"></i> <span>link</span></button>
-                        <button class="btn btn-sm js-btn-embed" data-bind="css: { active: action() === 'embed' }, click: _.partial($root.onActionClicked, $data, 'embed')"><i class="icon-embed"></i> <span>embed</span></button>
+                        <button class="btn btn-sm btn-default" data-bind="css: { active: action() === 'skip' }, click: _.partial($root.onActionClicked, $data, 'skip')"><i class="icon-skip"></i> <span>skip</span></button>
+                        <button class="btn btn-sm btn-default js-btn-link" data-bind="css: { active: action() === 'link', disabled: !canLinkTargetTable() }, click: _.partial($root.onActionClicked, $data, 'link')"><div><i class="icon-link"></i> <span>link</span></div></button>
+                        <button class="btn btn-sm btn-default js-btn-embed" data-bind="css: { active: action() === 'embed' }, click: _.partial($root.onActionClicked, $data, 'embed')"><i class="icon-embed"></i> <span>embed</span></button>
                     </div>
-                    <span data-bind="visible: effectiveInnerTable() || effectiveLinkTable()">
-                        <i class="icon-arrow-right"></i>
+                    <span class="arrow" data-bind="visible: effectiveInnerTable() || effectiveLinkTable()">
+                        <i class="icon-arrow-filled-right"></i>
                     </span>
-                </td>
-                <td>
                     <div class="inline-edit inline-block" data-bind="with: effectiveInnerTable, visible: action() === 'embed'">
                         <span class="static">
                             <span class="raven-property-name" data-bind="text: $parent.name"></span>:
@@ -449,20 +472,18 @@
                         </div>
                         <input class="form-control input-sm" data-bind="textInput: $parent.name" />
                     </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    <div data-bind="with: effectiveInnerTable">
-                        <div data-bind="css: { 'array-container': $parent.type === 'OneToMany'}">
-                            <div class="object-container" data-bind="template: { name: 'object-template' }">
-                            </div>
+                </div>
+        </div>
+        
+        <div class="inner-table" data-bind="with: effectiveInnerTable">
+                    <div data-bind="css: { 'array-container': $parent.type === 'OneToMany'}">
+                        <div class="object-container" data-bind="template: { name: 'object-template' }">
                         </div>
                     </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+        </div>
+            
+        <!-- /ko -->
+    </div>
 </script>
 
 <script type="text/html" id="migration-settings-template">
@@ -493,7 +514,7 @@
         </div>
 
         <div class="form-group" data-bind="validationElement: maxDocumentsToImportPerTable, visible: testImport">
-            <label class="control-label left-indent">Maximum rows number<br /><small class="text-muted">per SQL table</small></label>
+            <label class="control-label left-indent">Maximum rows to process<br /><small class="text-muted">per SQL table</small></label>
             <div class="flex-grow">
                 <input class="form-control" placeholder="Migration batch size" data-bind="numericInput: maxDocumentsToImportPerTable">
             </div>
