--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -375,6 +375,16 @@
 .make-icon(twitter, "\ea12");
 .make-icon(linkedin, "\ea11");
 .make-icon(paste, "\e90e");
+.make-icon(sql-attachment, "\e9eb");
+.make-icon(sql-binary, "\e9ec");
+.make-icon(sql-boolean, "\e9ed");
+.make-icon(sql-boolean2, "\e9ee");
+.make-icon(sql-document-id, "\e9ef");
+.make-icon(sql-many-to-one, "\e9f0");
+.make-icon(sql-one-to-many, "\e9f2");
+.make-icon(sql-string, "\e9f3");
+.make-icon(sql-number, "\e9f1");
+.make-icon(sql-unsupported, "\e9f4");
 
 /* ONLY MENU ICON COLORS */
 #main-menu {
