--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -153,7 +153,6 @@
         .prop-table {
             display: grid;
             grid-template-columns: auto auto auto 1fr;
-            //padding: @grid-gutter-width/2;
         }
 
         .inner-table {
@@ -204,10 +203,10 @@
             }
         }
 
-        .reverences-container {
+        .references-container {
             display: contents;
 
-            .reverence-item {
+            .reference-item {
                 display: contents;
 
                 & > .relation {
