--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
@@ -66,12 +66,14 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row">
-                                <div class="col-sm-10">
+                            <div class="form-group flex-horizontal">
+                                <div>
                                     <button class="btn btn-default" type="button"
                                             data-bind="click: $root.showAdvancedOptions.toggle.bind($root.showAdvancedOptions)">
                                         Advanced
                                     </button>
+                                </div>
+                                <div>
                                     <button class="btn btn-primary" type="submit"
                                             data-bind="disable: $root.spinners.schema, css: { 'btn-spinner': $root.spinners.schema }">
                                         <span class="icon-import"></span> <span>Create new import</span>
@@ -393,9 +395,9 @@
         <!-- /ko -->
     </div>
     <!-- /ko -->
-    <div class="reverences-container">
+    <div class="references-container">
         <!-- ko foreach: references -->
-        <div class="reverence-item" data-bind="attr: { 'data-ref-id': id }">
+        <div class="reference-item" data-bind="attr: { 'data-ref-id': id }">
             
                 <div class="relation" data-bind="visible: type === 'OneToMany'">
                     <div class="key" title="primary key">
@@ -408,12 +410,11 @@
                         <i data-bind="attr: { class: getTypeClass() }"></i>
                     </div>
                     <div class="from" title="from foreign key">
-                        <span class="text-muted"><!--from--> <span class="key-type foreign"><i class="icon-key"></i></span></span>
+                        <span class="text-muted"> <span class="key-type foreign"><i class="icon-key"></i></span></span>
                         <span data-bind="text: joinColumns.join(', ')"></span>
                         
                     </div>
                     <div class="in">
-                        <!--<span class="text-muted">in</span>-->
                         <strong>
                             <a href="#" class="nobr" data-bind="attr: { title: 'Navigate to reverse reference in ' + targetTable.tableName + ' table'}, click: $root.goToReverseReference">
                                 <i class="icon-table"></i> <span data-bind="text: targetTable.tableName"></span>
@@ -434,11 +435,10 @@
                         <i data-bind="attr: { class: getTypeClass() }"></i>
                     </div>
                     <div class="from" title="from primary key">
-                        <span class="text-muted"><!--from--> <span class="key-type primary"><i class="icon-key"></i></span></span>
+                        <span class="text-muted"> <span class="key-type primary"><i class="icon-key"></i></span></span>
                         <span data-bind="text: targetTable.getPrimaryKeyColumnNames().join(',')"></span>
                     </div>
                     <div class="in" title="in table">
-                        <!--<span class="text-muted">in</span>-->
                         <strong>
                             <a href="#" class="nobr" data-bind="attr: { title: 'Navigate to reverse reference in ' + targetTable.tableName + ' table'}, click: $root.goToReverseReference">
                                 <i class="icon-table"></i>
@@ -476,10 +476,10 @@
         </div>
         
         <div class="inner-table" data-bind="with: effectiveInnerTable">
-                    <div data-bind="css: { 'array-container': $parent.type === 'OneToMany'}">
-                        <div class="object-container" data-bind="template: { name: 'object-template' }">
-                        </div>
-                    </div>
+            <div data-bind="css: { 'array-container': $parent.type === 'OneToMany'}">
+                <div class="object-container" data-bind="template: { name: 'object-template' }">
+                </div>
+            </div>
         </div>
             
         <!-- /ko -->
