--- a/src/Raven.Studio/wwwroot/Content/css/main-menu.less
+++ b/src/Raven.Studio/wwwroot/Content/css/main-menu.less
@@ -336,6 +336,7 @@
         display: flex;
         color: @gray-lighter;
         background-color: @brand-primary;
+        flex-shrink: 0;
 
         .value {
             flex-grow: 1;
