--- a/src/Raven.Studio/wwwroot/App/views/database/status/statistics.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/status/statistics.html
@@ -1,6 +1,6 @@
 <section data-bind="if: stats" class="stats content-margin">    
     <h1>General Stats
-        <a target="_blank" href="#" title="Show raw output" data-bind="attr: { href: rawJsonUrl }"><i class="icon-json"></i></a>
+        <a target="_blank" href="#" title="Show raw output" data-bind="attr: { href: rawJsonUrl }"><i class="icon-link"></i></a>
     </h1>
     <div id="storage-report" title="Base path for database data files">
         <div class="base-path">
