--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables.less
@@ -60,6 +60,16 @@
     @color-5-2: #d85b9a;
     @color-5-3: #ed558c;
 
+@brand-database-color: #ad1457;
+
+@color-counters: @color-3-3;
+@color-revisions: @color-1-3;
+@color-recent: @color-4-1;
+@color-attachments: @color-3-1;
+@color-related: @color-4-3;
+
+@link-color: #e33572;
+@link-hover-color: #ff6565;
 
 //== Scaffolding
 //
